<resources>
    <string name="app_name">Her &amp; her</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="creat_account">Create account</string>


    <string name="posts_recent">Recent Posts</string>
    <string name="stage_question">What stage of breast cancer do you have?</string>

    <string name="text1">is simply dummy text of the printing and typesetting industry.</string>
    <string name="text2">Demonstration of how a post with only text will look,
        is simply dummy text of the printing and typesetting industry.</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
