<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/header" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/header"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText

            android:id="@+id/userName_editText"
            style="@style/EditText_style"
            android:drawablePadding="@dimen/horizontal_margin_short"
            android:hint="@string/user_name"
            android:paddingLeft="@dimen/padding_editText"
            android:paddingRight="10dp" />



        <ImageView
            android:id="@+id/account_ImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@id/userName_editText_signUp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/horizontal_margin_short"
            android:contentDescription="@string/creat_account"
            android:src="@mipmap/username_icon" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password_editText"
            style="@style/EditText_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_editText"
            android:paddingRight="10dp" />


        <ImageView

            android:id="@+id/password_imageView"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/horizontal_margin_short"
            android:contentDescription="@string/password"
            android:src="@mipmap/password" />

        </RelativeLayout>
        <Button
            android:id="@+id/login_button"
            style="@style/Button_style"
            android:onClick="login"
            android:text="@string/login" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:layout_centerHorizontal="true"
            android:onClick="register"
            android:text="Not Registered ? Click here"
            android:textSize="16sp" />


        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin_short"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="16sp" />

            <View
                android:layout_width="77dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/gray" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/horizontal_margin_short"
            android:src="@mipmap/twitter_icon" />

        <ImageView
            android:id="@+id/gmail_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@id/twitter_icon"
            android:layout_alignTop="@id/twitter_icon"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/twitter_icon"
            android:src="@mipmap/gmail_icon" />


        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@id/twitter_icon"
            android:layout_alignTop="@id/twitter_icon"
            android:layout_marginLeft="8dp"
            android:layout_toLeftOf="@id/twitter_icon"
            android:src="@mipmap/facebook_icon" />

    </LinearLayout>

</RelativeLayout>